loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:7: error: value tp is not a member of Int
for (compteur2<- 1 tp 8) {
                   ^