loopfor.LoopStairs.scala.code
var compteur1 =0
var compteur2 = 0

for (compteur1<- 1 to 3) {
  avance()
}
for (compteur2<- 1 tp 8) {
  gauche()
  avance()
  droite()
  avance()
}